# FractureAgent

./: .env.example  .gitignore  CITATION.cff  DATA_LICENSES.md  LICENSE  README.md  pyproject.toml  requirements-swift.txt  requirements.txt
analysis/: 01_proportion_cis_and_tests.py  02_safety_metrics.py  03_latency_profiling.py  04_calibration_hallucination.py  05_interrater_reliability.py  06_mcnemar_paired.py
configs/: agent.yaml  data.yaml  eval.yaml  grpo.yaml  sft_qlora.yaml  sources.yaml  swift_infer.yaml  swift_sft.yaml  train_sft.yaml
data/: README.md
deliverables/: manuscript_clean_r3_corrected.docx  response_to_reviewers_r3.docx  response_to_reviewers_r3_corrected.docx  track_manus_r3.docx  track_manus_r3_corrected.docx
docs/: code_availability_statement.md  manuscript_change_checklist.md  reproducibility_workflow.md  response_to_reviewers_r3.md  reviewer_response_R4.md  swift_training.md
evaluation/: scenarios.jsonl
fractureagent/: __init__.py  cli.py  config.py  schemas.py
fractureagent/data/: io.py  (+22 more)
prompts/: dialogue_synthesis.txt  escalation_response.txt  system_rehab.txt  tool_trace_augmentation.txt  tools.json
records/: README.md
scripts/: 00_crawl.sh  00_install_swift.ps1  00_install_swift.sh  01_build_dataset.ps1  01_build_dataset.sh  02_train_sft.ps1  02_train_sft.sh  02_train_swift.ps1  03_evaluate.ps1  03_infer_swift.ps1  03_train_grpo.sh  04_evaluate.sh  04_run_smoke_test.ps1  build_response_r3.py  create_track_manuscript.py
tests/: test_data.py  test_metrics.py  test_react.py  test_safety.py  test_safety_gate.py  test_tools.py
(+35 files in other folders)
