[project]
name = "fractureagent"
version = "1.0.0"
description = "Multi-tool LLM agent for fracture-rehabilitation support (SFT + GRPO)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["fractureagent*"]
